terraform/Lesson2_WebServer/WebServer.tf
#----------------------------------------------------
# My Terraform
#
# Build WebServer during Bootstrap
#
#
# Made by Andrii Hanzha :)

provider "aws"{}

resource "aws_instance" "my_webserver" {
    ami = "ami-013fffc873b1eaa1c"
    instance_type = "t2.micro"
    vpc_security_group_ids = [aws_security_group.my_webserver.id]
    user_data = <<EOF
#!/bin/bash
yum -y update
yum -y install httpd
myip=`curl http://169.254.169.254/latest/meta-data/local-ipv4`
echo "<h2>WebServer with IP: $myip</h2><br>Build by Terraform!" > /var/www/html/index.html
sudo service httpd start
chkconfig httpd on
EOF

tags = {
    Name = "Web Server Build by Terraform"
    Owner = "Andrii Hanzha"
}
}

resource "aws_security_group" "my_webserver" {
  name        = "WebServer Security Group"
  description = "My First SecurityGroup"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

    ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

 
tags = {
    Name = "Web Server SecurityGroup by Terraform"
    Owner = "Andrii Hanzha"
}
}
